k8s/applications/web/mastodon/http-route.yaml
# k8s/applications/web/mastodon/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mastodon
  namespace: mastodon
spec:
  parentRefs:
    - name: external
      namespace: gateway
    - name: internal
      namespace: gateway
  hostnames:
    - mastodon.local.invalid  # <- replaced at build time by Kustomize from mastodon-settings
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mastodon
          port: 80
